Fix broken CSS media query

--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ img.leg.down {
 and (min-device-width : 375px) 
 and (max-device-width : 413px) 
 and (orientation : portrait) { 
+  #title .text {
+    margin-left: 40px;
+  }
+
   .attribution {
     font-size: 0.7em !important;
   }
@@ -181,7 +185,7 @@ and (orientation : portrait) {
 /* iPhone 4 and 5 */
 @media only screen 
 and (min-device-width : 320px) 
-and (max-device-width : 568px) 
+and (max-device-width : 374px) 
 and (orientation : portrait) { 
   #title img {
     height: 90%;
